# Double_Pendulum

./: .gitignore  CMakeLists.txt  Etude.py  README.md  cart_2pend.txt  cart_2pend_bis.txt  double_pendulum.cpp  main.py  res_1pend.txt  res_2pend.txt  simple_pendulum.cpp
image/: LICENSE
include/: double_pendulum.hpp  simple_pendulum.hpp
src/: double_pendulum.cpp  double_pendulum_plot.py  main.cpp  plot_trajectories.py  simple_pendulum.cpp  simple_pendulum_plot.py
